<resources>
    <string name="app_name">Album</string>
    <string name="title_activity_base">BaseActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="title_activity_main">MainActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="home_album">图库</string>
    <string name="home_recommend">为您推荐</string>
    <string name="home_relatives">相薄</string>
    <string name="home_search">搜索</string>
    <string name="home_me">我的</string>

    <string name="logo_name">Album</string>

    <!--fragment attr-->
    <string name="tv_album_name">相册名</string>
    <string name="tv_album_image_num">0</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">手机号/邮箱/用户名</string>
    <string name="prompt_password">输入密码</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!--login-->
    <string name="tv_login_name">用户名</string>
    <string name="tv_login_password">密码</string>
    <string name="remember_password">记住密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="bt_login">登录</string>
    <string name="bt_register">注册</string>

    <!--register-->
    <string name="tv_register">注册</string>
    <string name="tv_doc">手机号仅用于登录和保护账号安全</string>
    <string name="tv_input_iphone_number">请输入手机号</string>
    <string name="tv_input_code">发送验证码</string>
    <string name="tv_input_password">请输入6-18位登录密码</string>
    <string name="tv_input_password_again">请再次输入一次密码</string>

    <!--forget password-->
    <string name="forget_password_text">忘记密码</string>
    <string name="et_input_phone_number">请输入手机号码</string>
    <string name="et_input_code">请输入验证码</string>
    <string name="bt_send_verify_code">发送验证码</string>
    <string name="bt_next_step">下一步</string>

    <!--reset password-->
    <string name="tv_set_password">设置登录密码</string>
    <string name="et_reset_password">设置6-18位登录密码</string>
    <string name="et_reset_password_again">重新输入一次密码</string>
    <string name="bt_reset_finish">完成</string>

    <!--click image-->
    <string name="tv_year_month_day">2022年02月22日</string>
    <string name="tv_hour_min">22:22</string>
    <string name="tv_image_send">发送</string>
    <string name="tv_image_edit">编辑</string>
    <string name="tv_image_collect">收藏</string>
    <string name="tv_image_delete">删除</string>
    <string name="tv_image_more">更多</string>

    <string name="select_image_limit">最多选择%1$d张图片</string>
    <string name="ip_all_images">所有图片</string>
    <string name="tv_select_top_image_text">图片</string>
    <string name="bt_select_finish">完成(0/3)</string>
    <string name="tv_select_preview">预览(3)</string>
    <string name="bt_select_complete">完成(%1$d/%2$d)</string>
    <string name="bt_select_complete_default">完成</string>
    <!--删除-->
    <string name="tv_show_image_delete_text">删除</string>
    <string name="tv_show_image_tips_text">确定从当前相册中删除这1项内容？</string>
    <string name="bt_show_image_quit">取消</string>
    <string name="bt_show_image_delete">删除</string>
    <!--分享-->
    <string name="tv_share_text">分享到...</string>
    <string name="tv_popup_window_close">取消</string>

    <!--personal-->
    <string name="tv_person_username">yangmiao</string>
    <string name="tv_person_sign">好好拥抱生活，过好自己的人生</string>

    <string name="iv_person_little_beauty">我的小美好</string>
    <string name="iv_person_emoji">表情包</string>
    <string name="iv_person_recently_delete">最近删除</string>
    <string name="iv_person_up_and_download">上传下载管理</string>
    <string name="iv_person_setting">设置</string>

    <string name="tv_person_info_text">个人信息</string>
    <string name="tv_person_info_head_portrait">头像</string>
    <string name="tv_person_info_username">名字</string>
    <string name="tv_person_info_username_temp">张三</string>
    <string name="tv_person_info_my_sign">个性签名</string>
    <string name="tv_person_info_my_qr_code">我的二维码</string>
    <string name="tv_person_info_my_local_address">我的地址</string>
    <string name="title_activity_person_info">PersonInfoActivity</string>

    <string name="tv_head_image_personal_info">个人头像</string>
    <string name="tv_dialog_take_photo">拍照</string>
    <string name="tv_dialog_get_photo_from_album">从手机相册选择</string>
    <string name="tv_dialog_save_photo">保存图像</string>
    <string name="tv_dialog_exit">取消</string>

    <string name="tv_set_name_exit">取消</string>
    <string name="tv_set_name_text">设置名字</string>
    <string name="bt_set_name_finish">完成</string>

    <!--loading-->
    <string name="tv_app_loading_text">努力加载中...</string>

    <!--recommend-->
    <string name="tv_recommend_puzzle_text">拼图</string>
    <string name="tv_recommend_crop_text">裁剪</string>
    <string name="tv_recommend_art_photo_text">艺术照片</string>
    <string name="tv_recommend_video_making_text">视频制作</string>

    <string name="sv_recommend_search_text">照片、人物、地点...</string>
    <string name="iv_search_list_clear_res">清除搜索历史</string>
    <string name="tv_search_item_res">搜索记录</string>

    <string name="tv_item_recommend_introduce">在达州</string>
    <string name="tv_item_recommend_time">2022年02月22日</string>

    <!--album-->
    <string name="tv_loading_refresh">数据加载中...</string>

</resources>