<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"

    tools:context=".ui.activity.account.LoginActivity"
    android:focusableInTouchMode="true"
    android:focusable="true">

    <androidx.cardview.widget.CardView
        android:id="@+id/img_item_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/dp_10"
        app:cardElevation="@dimen/dp_3"
        android:layout_marginBottom="@dimen/dp_50">
        <ImageView
            android:layout_width="@dimen/dp_120"
            android:layout_height="@dimen/dp_120"
            android:src="@drawable/login_image"/>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="@dimen/dp_250"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_login_name"
        android:textSize="@dimen/sp_20"
        android:textColor="@color/black"
        android:layout_weight="0.2"/>

    <EditText
        android:id="@+id/et_username"
        android:layout_width="@dimen/dp_110"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_5"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:layout_weight="0.9"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/dp_250"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_login_password"
        android:textSize="@dimen/sp_20"
        android:letterSpacing="0.2"
        android:textColor="@color/black"
        android:layout_weight="0.2"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_5"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:layout_weight="0.9"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="@dimen/dp_250"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20">
        <CheckBox
            android:id="@+id/cb_remember_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_password"
            android:textSize="@dimen/sp_18"
            android:textColor="@color/black"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/bt_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textSize="@dimen/sp_18"
            android:textColor="@color/black"
            android:background="@android:color/transparent"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/dp_250"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20">

        <Button
            android:id="@+id/bt_register"
            android:layout_width="@dimen/dp_100"
            android:layout_height="wrap_content"
            android:text="@string/bt_register"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_20"
            android:layout_weight="1"
            android:background="@drawable/btn_selected"/>

        <Button
            android:id="@+id/bt_login"
            android:layout_width="@dimen/dp_100"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:text="@string/bt_login"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_20"
            android:layout_weight="1"
            android:background="@drawable/btn_selected" />

    </LinearLayout>


</LinearLayout>