<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_radius">

    <TextView
        android:id="@+id/tv_show_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_show_image_delete_text"
        android:textSize="@dimen/sp_20"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/tv_show_dialog_middle_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_show_image_tips_text"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_18"
        android:layout_below="@+id/tv_show_dialog_title"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/bt_show_quit"
        android:layout_width="@dimen/dp_130"
        android:layout_height="@dimen/dp_50"
        android:text="@string/bt_show_image_quit"
        android:textSize="@dimen/sp_18"
        android:background="@drawable/btn_selected"
        android:layout_below="@+id/tv_show_dialog_middle_text"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_30"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <Button
        android:id="@+id/bt_show_delete"
        android:layout_width="@dimen/dp_130"
        android:layout_height="@dimen/dp_50"
        android:layout_below="@+id/tv_show_dialog_middle_text"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginEnd="@dimen/dp_40"
        android:background="@drawable/btn_selected"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:text="@string/bt_show_image_delete"
        android:textSize="@dimen/sp_18"
        android:textColor="@color/white" />

</RelativeLayout>