<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginTop="@dimen/dp_40">
    <RelativeLayout
        android:id="@+id/top_set_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tv_set_name_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/tv_set_name_exit"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_20"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dp_20"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_set_name_text"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_24"
            android:layout_centerInParent="true"/>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/dp_6"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="@dimen/dp_20">
            <Button
                android:id="@+id/bt_set_name_finish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bt_set_name_finish"
                android:textSize="@dimen/sp_20"
                android:textColor="@color/black"
                android:background="@color/colorGray"/>
        </androidx.cardview.widget.CardView>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/middle_set_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_set_name_layout"
        android:layout_marginTop="@dimen/dp_20">

        <EditText
            android:id="@+id/et_edit_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            android:background="@drawable/search_edittext_shape"
            android:inputType="text"
            android:paddingStart="@dimen/dp_20"
            android:text="@string/app_name" />
        <ImageView
            android:id="@+id/iv_search_delete"
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_30"
            android:layout_marginEnd="@dimen/dp_20"
            android:visibility="visible"
            android:src="@drawable/iv_delete_bg"
            android:layout_gravity="right|center_vertical"
            tools:ignore="RtlHardcoded"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
</RelativeLayout>