<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".ui.activity.account.ForgetPasswordActivity"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:id="@+id/forget_password_top_layout"
        android:layout_width="@dimen/dp_380"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_40"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/forget_password_backup"
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_30"
            android:layout_marginStart="@dimen/dp_20"
            android:src="@drawable/forget_password_backup" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/dp_100"
            android:gravity="center"
            android:text="@string/forget_password_text"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_24" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/forget_password_phone_layout"
        android:layout_width="@dimen/dp_380"
        android:layout_height="wrap_content"
        android:layout_below="@id/forget_password_top_layout"
        android:layout_marginTop="@dimen/dp_20"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_30"
            android:layout_marginStart="@dimen/dp_20"
            android:src="@drawable/forget_password_iphone" />

        <EditText
            android:id="@+id/et_input_iphone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_input_phone_number"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_18"
            android:layout_marginStart="@dimen/dp_20"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/forget_password_code_layout"
        android:layout_width="@dimen/dp_380"
        android:layout_height="wrap_content"
        android:layout_below="@id/forget_password_phone_layout"
        android:layout_marginTop="@dimen/dp_20"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/forget_password_iv"
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_30"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dp_20"
            android:src="@drawable/forget_password" />

        <EditText
            android:id="@+id/et_input_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_toLeftOf="@+id/bt_send_verify_code"
            android:layout_toRightOf="@+id/forget_password_iv"
            android:hint="@string/et_input_code"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_18" />

        <Button
            android:id="@+id/bt_send_verify_code"
            android:layout_width="@dimen/dp_100"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/btn_selected"
            android:text="@string/bt_send_verify_code"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="@dimen/dp_380"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forget_password_code_layout"
        android:layout_marginTop="@dimen/sp_20"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/bt_next_step"
            android:layout_width="@dimen/dp_270"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_selected"
            android:gravity="center"
            android:text="@string/bt_next_step"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_20" />
    </LinearLayout>


</RelativeLayout>