<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".ui.activity.account.ResetPasswordActivity"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:id="@+id/forget_password_top_layout"
        android:layout_width="@dimen/dp_380"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/reset_password_backup"
            android:layout_width="@dimen/dp_35"
            android:layout_height="@dimen/dp_35"
            android:layout_marginStart="@dimen/dp_10"
            android:src="@drawable/forget_password_backup" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/tv_set_password"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_24"
            android:layout_marginStart="@dimen/dp_100"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/forget_password_phone_layout"
        android:layout_width="@dimen/dp_380"
        android:layout_height="wrap_content"
        android:layout_below="@id/forget_password_top_layout"
        android:layout_marginTop="@dimen/dp_20"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/dp_40"
            android:layout_height="@dimen/dp_40"
            android:layout_marginStart="@dimen/dp_10"
            android:src="@drawable/forget_password" />

        <EditText
            android:id="@+id/et_reset_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_reset_password"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_18"
            android:layout_marginStart="@dimen/dp_20"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/reset_password_code_layout"
        android:layout_width="@dimen/dp_380"
        android:layout_height="wrap_content"
        android:layout_below="@id/forget_password_phone_layout"
        android:layout_marginTop="@dimen/dp_20"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/reset_password_iv"
            android:layout_width="@dimen/dp_40"
            android:layout_height="@dimen/dp_40"
            android:layout_marginStart="@dimen/dp_10"
            android:src="@drawable/forget_password" />

        <EditText
            android:id="@+id/et_reset_password_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_toRightOf="@+id/reset_password_iv"
            android:hint="@string/et_reset_password_again"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_18" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="@dimen/dp_400"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reset_password_code_layout"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/sp_20">
        <Button
            android:id="@+id/bt_finish"
            android:layout_width="@dimen/dp_270"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_selected"
            android:gravity="center"
            android:text="@string/bt_reset_finish"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_20" />
    </LinearLayout>


</RelativeLayout>